<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MakeMyReport
    </string>
    <string name="action_settings">Settings
    </string>

    <string name="Customers">Customers</string>
    <string name="LastReports">Last used reports</string>
    <string name="Reports">Reports</string>

    <string name="Menu_New_Customer">New</string>
    <string name="Menu_New_Customer_Description">Add new customer</string>

    <string name="Menu_New_Report">New</string>
    <string name="Menu_New_Report_Description">Add new report</string>

    <string name="Menu_Delete_Customer">Delete</string>
    <string name="Menu_Delete_Customer_Description">Delete customer</string>

    <string name="Menu_Delete_Report">Delete</string>
    <string name="Menu_Delete_report_Description">Delete report</string>

    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Settings_Description">Manage your settings</string>

    <string name="Menu_Search">Search</string>
    <string name="Menu_Search_Description">Search for customers and reports</string>

    <string name="Menu_Drop_Delete">Drop to delete</string>

    <string name="Menu_About">About</string>
    <string name="Menu_About_Description">About this app</string>
    <string name="CustomerName">Name</string>
    <string name="CustomerDescription">Description</string>
    <string name="Customer_Image">Image</string>
    <string name="ChoseImage">Pick a image...</string>
    <string name="NewCustomer">New customer</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>

    <string name="Error_Customer_Name">Please enter a name</string>
    <string name="Error_Customer_Description">Please enter a description</string>
    <string name="Error_Customer_Logo">Please select a Logo</string><string name="Report_Navigation">Navigation</string><string name="Report_Case">Case #</string><string name="Butten_delete">Delete</string><string name="Button_Edit_Customer">Edit</string><string name="NoReports">No reports</string>

    <string name="Report">Report</string>
    <string name="Reports">Reports</string>


</resources>
